build_error.txt
    Checking rustview v0.1.0 (C:\_new_ai_project\uriviewer)
warning: unused imports: `CMF_DEFAULTONLY` and `CMF_VERBSONLY`
  --> src\shell_ext.rs:19:5
   |
19 |     CMF_DEFAULTONLY, CMF_VERBSONLY, CMINVOKECOMMANDINFO, HDROP,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\app.rs:599:17
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                 ----^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0506]: cannot assign to `*self.view_mode` because it is borrowed
   --> src\app.rs:618:17
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- `*self.view_mode` is borrowed here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- borrow occurs due to use in closure
...
618 |                 self.view_mode = ViewMode::Viewer;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*self.view_mode` is assigned to here but it was already borrowed
619 |             }
620 |             if render_btn(ui, "??, "媛ㅻ윭由?(G)", self.view_mode == ViewMode::Gallery).clicked() {
    |                ---------- borrow later used here

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src\app.rs:621:17
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- immutable borrow occurs here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- first borrow occurs due to use of `*self` in closure
...
621 |                 self.enter_gallery();
    |                 ^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
622 |             }
623 |             if render_btn(ui, "?뱛", "?뚯씪 ?닿린 (Ctrl+O)", false).clicked() {
    |                ---------- immutable borrow later used here

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src\app.rs:624:17
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- immutable borrow occurs here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- first borrow occurs due to use of `*self` in closure
...
624 |                 self.open_dialog(ctx);
    |                 ^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
625 |             }
626 |             if render_btn(ui, "??, "?곸뿭 ?좏깮 (S)", self.view_state.selection_mode).clicked() {
    |                ---------- immutable borrow later used here

error[E0506]: cannot assign to `*self.view_state.selection_mode` because it is borrowed
   --> src\app.rs:627:17
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- `*self.view_state.selection_mode` is borrowed here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- borrow occurs due to use in closure
...
627 |                 self.view_state.selection_mode = !self.view_state.selection_mode;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*self.view_state.selection_mode` is assigned to here but it was already borrowed
...
632 |                 if render_btn(ui, "?", "?꾩?留?, self.help_open).clicked() {
    |                    ---------- borrow later captured here by closure

error[E0502]: cannot borrow `*self.settings_open` as mutable because it is also borrowed as immutable
   --> src\app.rs:630:74
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- immutable borrow occurs here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- first borrow occurs due to use of `*self` in closure
...
630 |             ui.with_layout(egui::Layout::bottom_up(egui::Align::Center), |ui| {
    |                                                                          ^^^^ mutable borrow occurs here
631 |                 ui.add_space(8.0);
632 |                 if render_btn(ui, "?", "?꾩?留?, self.help_open).clicked() {
    |                    ---------- immutable borrow later captured here by closure
...
636 |                     self.settings_open = !self.settings_open;
    |                     ------------------ second borrow occurs due to use of `*self.settings_open` in closure

error[E0502]: cannot borrow `*self.help_open` as mutable because it is also borrowed as immutable
   --> src\app.rs:630:74
    |
599 |             let mut render_btn = |ui: &mut egui::Ui, icon: &str, text: &str, active: bool| {
    |                                  --------------------------------------------------------- immutable borrow occurs here
600 |                 let res = self.activity_button(ui, icon, active);
    |                           ---- first borrow occurs due to use of `*self` in closure
...
630 |             ui.with_layout(egui::Layout::bottom_up(egui::Align::Center), |ui| {
    |                                                                          ^^^^ mutable borrow occurs here
631 |                 ui.add_space(8.0);
632 |                 if render_btn(ui, "?", "?꾩?留?, self.help_open).clicked() {
    |                    ---------- immutable borrow later captured here by closure
633 |                     self.help_open = !self.help_open;
    |                     -------------- second borrow occurs due to use of `*self.help_open` in closure

warning: value assigned to `menu_index` is never read
   --> src\shell_ext.rs:220:21
    |
220 |                     menu_index += 1;
    |                     ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0502, E0506.
For more information about an error, try `rustc --explain E0502`.
warning: `rustview` (lib) generated 3 warnings
error: could not compile `rustview` (lib) due to 6 previous errors; 3 warnings emitted
